# AI-SDLC_Explainer

./: .gitignore  AI-SDLC_best-practice_method_principles.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml  requirements.txt  run.py
.kiro/specs/aidlc-web-app/: design.md  requirements.md  tasks.md
AI-SDLC_Context_Summaries_References/: 00-INDEX.md  01-WHAT-IS-AI-SDLC.md  02-THREE-PHASES.md  03-TEN-PRINCIPLES.md  04-FIVE-LEVELS.md  05-OPERATIONALIZATION.md  06-ROLES-AND-ORG-CHANGE.md  07-ADOPTION-AND-TRANSITION.md  08-ARTIFACTS-AND-STATE-MODEL.md  09-BROWNFIELD-AND-ELEVATION.md  10-SOURCES-AND-REFERENCES.md
agent-skills/: frontend-design_skill.md
aidlc-docs/: aidlc-state.md  audit.md  execution-plan.md  feature-interactive-simulator.md  feature-methodology-comparison.md  feature-ritual-walkthroughs.md  feature-transition-mapping.md  feedback-remediation-plan.md  improvement-plan-5-levels-operationalization.md  improvement-plan.md  prompts.md  user-stories-backlog.md
aidlc-docs/construction/: domain-model.md  gamification-improvement-plan.md
aidlc-docs/inception/: intent.md  nfr.md  requirements.md  sources-local-map.md
aidlc-web-app/: jest.config.js  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
aidlc-web-app/src/lib/: xp.ts  (+5 more)
src/aidlc_explainer/: __init__.py  __main__.py  app.py  navigation.py  state.py  styles.tcss
tests/: __init__.py  test_content.py  test_gates_schema.py  test_glossary.py  test_navigation.py  test_quiz_schema.py  test_simulator_branching.py  test_simulator_schema.py  test_state.py
(+121 files in other folders)
